<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.cocktailapp.fragment.info.InfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.info.InfoFragment">


        <androidx.cardview.widget.CardView

            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_145dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_9dp"
            app:layout_constraintBottom_toTopOf="@+id/card2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    style="@style/cardview"

                    android:text="@string/AboutTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/AboutSubtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_145dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_9dp"
            app:layout_constraintBottom_toTopOf="@+id/card3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    style="@style/cardview"

                    android:text="@string/ShareTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ShareSubtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_145dp"
            android:layout_margin="@dimen/dimen_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card2"
            tools:layout_editor_absoluteX="@dimen/dimen_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    style="@style/cardview"

                    android:text="@string/ContactTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ContactSubtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>